# Text_piece_Elastic_Search

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: github_push_test.yml
alembic/: env.py
alembic/versions/: e75b78f5c05b_create_tables.py
tests/: test_demo.py
web/: constants.py  crud.py  database.py  errors.py  es.py  es_utils.py  logger.py  main.py  models.py  schemas.py
