[tool.poetry]
name = "text_piece_finder"
version = "0.1.0"
description = "Application based on FastAPI to save and search text pieces in Elastic Search storage"
authors = ["Dmitrii Chebotarev <skrubberqumo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
elasticsearch = {extras = ["async"], version = "^8.2.0"}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.942"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
commitizen = "^2.24.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
black = "^22.3.0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
